# safe-intercom-id-generator

./: .env.sample  Cargo.toml  README.md
src/: main.rs
