[package]
name = "safe-intercom-id-generator"
version = "0.1.0"
authors = ["fmrsabino <3332770+fmrsabino@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.11.0"
sha2 = "0.9.5"
lambda_runtime = "0.3.0"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.9.0", features = ["full"] }
